# embedding-server

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  app.py  logger.py  model.py  pyproject.toml  requirements.txt  run.py
app/: main.py
app/api/: embedding.py
app/config/: settings.py
app/model/: onnx_model_manager.py
models/: README.md
src/: __init__.py
src/api/: embedding.py
src/config/: settings.py
src/models/: gguf_model_manager.py  model.py  onnx_model_manager.py
src/utils/: gunicorn_app.py
